2012-01-27  Junichi Satoh  <junichi@rworks.jp>

	* include/help/en/help_alert_special_days.php,
	include/help/ja/help_alert_special_days.php: Added new help files
	for special days feature.

2012-01-26 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

     * include/functions_graph.php
	 include/graphs/functions_fsgraph.php: Modified background color in
	 flash charts.

2012-01-26 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php
	 operation/agentes/estado_generalagente.php: Added static event 
	 agent graph in main agent view.

2012-01-26  Sergio Martin <sergio.martin@artica.es>

	* include/functions_api.php: Improved the get all agents
	API function to retrieve more data as address, description, 
	operating system and url address

2012-01-25 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_reporting.php: Fixed Sla graph when it has 
	a boolean module data.	
	
	Bugfix: #3477786

2012-01-25  Ramon Novoa  <rnovoa@artica.es>

	* include/help/en/help_action_threshold.php,
	  include/help/es/help_action_threshold.php: Rewrote the
	  action_threshold help page and added an example.

2012-01-25 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_api.php: Added csv separator in function 
	get_all_agents.

2012-01-25  Vanessa Gil  <vanessa.gil@artica.es>

	* include/functions_agents.php: Bad behavior group filter
	in massive operations and policies management.

2012-01-25 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_api.php: removed warning from get_all_agents
	function.

2012-01-25  Vanessa Gil  <vanessa.gil@artica.es>

	* include/functions_agents.php: Fixed bug: Don't show
	good agents modules.

2012-01-25  Sergio Martin <sergio.martin@artica.es>

	* include/functions_network_components.php: Fixed some
	include relative paths to API calls

2012-01-25  Sergio Martin <sergio.martin@artica.es>

	* include/functions_incidents.php
	operation/integria_incidents/incident.incident.php