@@ -3,11 +3,13 @@
  * @package Include/help/ja
  */
 ?>
-<h1>時間しきい値</h1>
+<h1>アクションしきい値</h1>
 
 <p>
-時間しきい値
-</p>
-<p>
-最大アラート数よりも多い回数のアラートを発生させないことを保証する時間間隔の定義です。定義した間隔を越えた場合、復旧する値になった場合を除き、障害の値であってもアラートは発生しません。特定の復旧の値を受け取った場合は、しきい値に関係なく復旧します。
+何回アラートが発生したかに関わらず、アラートアクションがアクションしきい値の秒数内では 1回のみ実行されます。
+
+例えば、メール送信のアクションを設定していて、1時間に1通のみ受けたい場合は、アクションしきい値を 3600にします。
+
+個々のアクションしきい値の設定が、全体のアクションしきい値の設定より優先されることに注意してください。
+
 </p>
